# CatchTheDiff

./: .gitignore  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  crawl_rss.py  main.py  pyproject.toml  run_crawler.py
backend/app/: chinatimes_crawler.py  crawler.py  crud.py  database.py  google_news.py  models.py  rss_feeds.py  scheduler.py  scheduler_optimized.py  schemas.py  sources.py  utils.py
backend/app/crawlers/: README.md  __init__.py  base.py  chinatimes.py  rss.py  udn.py
backend/app/parsers/: README.md  __init__.py  base.py  cna.py  ettoday.py  ltn.py  newtalk.py  reporter.py  rti.py  storm.py  tvbs.py  udn.py
frontend/: .dockerignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  pnpm-lock.yaml
frontend/src/: App.vue  main.ts
frontend/src/api/: client.ts  news.ts  stats.ts
frontend/src/components/: AppHeader.vue  DiffViewer.vue  FilterModal.vue  LoadingSpinner.vue  NewsCard.vue  SourceChart.vue  StatCard.vue  VersionTimeline.vue
frontend/src/composables/: useInfiniteList.ts  useVersionNavigation.ts
frontend/src/constants/: sources.ts
frontend/src/router/: index.ts
frontend/src/stores/: news.ts  stats.ts
frontend/src/styles/: global.css  variables.css
frontend/src/types/: filters.ts  index.ts
frontend/src/utils/: diff.ts  formatters.ts  logger.ts
frontend/src/views/: DashboardView.vue  NewsDetailView.vue  RecentChangesView.vue  StatsView.vue
